--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,18 @@ dependencies:
   cloud_firestore: ^5.6.3
   flutter_form_builder: ^9.7.0
   google_sign_in: ^6.2.2
+  world_countries: ^3.1.0
+  country_flags: ^3.2.0
+  country_picker: ^2.0.27
+  countries_world_map: ^1.3.0
+  provider: ^6.1.2
+  settings_ui: ^2.0.2
+  app_settings: ^5.2.0
+  theme_provider: ^0.6.0
+  google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.8.0
+
+
 
   file_picker: ^8.3.1  # Pick files from local storage
   excel: ^4.0.6      # Read Excel files
@@ -49,6 +61,7 @@ dependencies:
   syncfusion_flutter_charts: ^28.1.35
   url_launcher: ^6.3.1
   fl_chart: ^0.70.2
+  marquee: ^2.3.0
 
 
 
@@ -88,6 +101,11 @@ flutter:
     - assets/nifty_stock_filtered1.json
     - assets/nifty_stock_sheet_sort1.json
     - assets/nft.json
+    - assets/predictions.json
+    - assets/predicted_stock_prices.json
+    - assets/stock_analysis.json
+    - assets/logo.jpg
+    - assets/error.webp
 
   #   
 
