--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ dependencies:
   url_launcher: ^6.3.1
   fl_chart: ^0.70.2
   marquee: ^2.3.0
+  google_generative_ai: ^0.4.6
+  webview_flutter: ^4.10.0
+  webview_flutter_web: ^0.2.3+4
+  webview_flutter_wkwebview: ^3.18.1
+  flutter_inappwebview: ^6.1.5
 
 
 
